envoy/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                use_remote_address: true
                xff_num_trusted_hops: 1
                upgrade_configs:
                  - upgrade_type: websocket
                route_config:
                  name: streamvault_routes
                  request_headers_to_add:
                    - header:
                        key: x-real-ip
                        value: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
                      keep_empty_value: false
                  virtual_hosts:
                    - name: streamvault
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: /ws/
                          route:
                            cluster: streamvault_core
                            upgrade_configs:
                              - upgrade_type: websocket
                        - match:
                            prefix: /api/
                          route:
                            cluster: streamvault_core
                        - match:
                            prefix: /stream/
                          route:
                            cluster: streamvault_core
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: streamvault_core
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: streamvault_core
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: streamvault-core
                      port_value: 8080
